objects/lightsideapps__Deployment_Package_Item__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Deployment_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deployment Package</label>
        <referenceTo>lightsideapps__Deployment_Package__c</referenceTo>
        <relationshipLabel>Deployment Package Items</relationshipLabel>
        <relationshipName>Deployment_Package_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Display_Metadata_Type__c</fullName>
        <label>Display Metadata Type</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Meta_Data__c</fullName>
        <label>Meta Data</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Metadata_Type__c</fullName>
        <label>Metadata Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deployment Package Item</label>
    <nameField>
        <label>Deployment Package Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Package Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>